--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <h1>Machete</h1>
     <ol>
         <li>h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
-            → p marca que dentro de la etiqueta va a haber un párrafo.
-            → Place holder: espacio que yo puedo ocupar. Lorem ipsum (es de lleno hasta que quiero ocupar ese espacio)
-            → img (es una etiqueta que no se cierra) sirve para agregar imágenes, va a habilitar dos corchetes (propiedades) src sirve para poner el http de la imagen alt sirve para aclarar que es esa imagen, en caso de que no se pueda cargar
-            placeholder.com/500/500 (refiere 500x500 pixeles que ocupa) me permite crear imágenes y lo puedo poner en src. Sino puedo crear una carpeta que se llame imagen y guardar una foto que yo quiera: “./images/nombrefoto.jpeg”
-            → br le marca al navegador que ahí hay un enter (generalmente no se usa, se separa en otro p)
-            → a hace un hipervínculo entre “./el link de google.html” y puedo agregar un >Ir a google<, si se aprieta te direcciona al link. 
-            a  href=”link de la imagen”(tabular:) input type=”text” (o “password”) value=”no me toques”. text sirve para que eso se muestre, password las letras se van a cambiar por puntos
-            → ol una lista desordenada, después tengo que agregar li (tabulado)
-            ol type=”A” start=”3” significa que la lista desordenada va a tener viñetas del abecedario mayúscula (también puede ser 1, a o i) y va a empezar desde la C, B, A.
-            → ul es una lista ordenada después tengo que agregar li (tabulado)
-            ul type=”disc” son viñetas de puntos
-            También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
-            → div no va a tener ningun cambio, solo marcan secciones en la página creada
+        <li>p marca que dentro de la etiqueta va a haber un párrafo.
+        <li>Place holder: espacio que yo puedo ocupar. Lorem ipsum (es de lleno hasta que quiero ocupar ese espacio)
+        <li>img (es una etiqueta que no se cierra) sirve para agregar imágenes, va a habilitar dos corchetes (propiedades) src sirve para poner el http de la imagen alt sirve para aclarar que es esa imagen, en caso de que no se pueda cargar
+        <li>placeholder.com/500/500 (refiere 500x500 pixeles que ocupa) me permite crear imágenes y lo puedo poner en src. Sino puedo crear una carpeta que se llame imagen y guardar una foto que yo quiera: “./images/nombrefoto.jpeg”
+        <li>br le marca al navegador que ahí hay un enter (generalmente no se usa, se separa en otro p)
+        <li>a hace un hipervínculo entre “./el link de google.html” y puedo agregar un >Ir a google<, si se aprieta te direcciona al link. 
+        <li>a  href=”link de la imagen”(tabular:) input type=”text” (o “password”) value=”no me toques”. text sirve para que eso se muestre, password las letras se van a cambiar por puntos
+        <li>ol una lista desordenada, después tengo que agregar li (tabulado)
+        <li>ol type=”A” start=”3” significa que la lista desordenada va a tener viñetas del abecedario mayúscula (también puede ser 1, a o i) y va a empezar desde la C, B, A.
+        <li>ul es una lista ordenada después tengo que agregar li (tabulado)
+        <li>ul type=”disc” son viñetas de puntos
+        <li>También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
+        <li>div no va a tener ningun cambio, solo marcan secciones en la página creada
             </li>
     </ol>
 </body>
