--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Machete</h1>
     <ol>
-        <type="disc"></type>h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
+        <type="disc">h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
         <li>p marca que dentro de la etiqueta va a haber un párrafo.
         <li>Place holder: espacio que yo puedo ocupar. Lorem ipsum (es de lleno hasta que quiero ocupar ese espacio)
         <li>img (es una etiqueta que no se cierra) sirve para agregar imágenes, va a habilitar dos corchetes (propiedades) src sirve para poner el http de la imagen alt sirve para aclarar que es esa imagen, en caso de que no se pueda cargar
