--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
     <li>div no va a tener ningun cambio, solo marcan secciones en la página creada
     </ul>
-    
+    <img src="https://pbs.twimg.com/profile_images/719613392382779392/UgqrF492_400x400.jpg" alt="ITBA">
+    <img src="./imagenes/UgqrF492_400x400.jpg" alt="">
 </body>
 </html>
