--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <li>ul es una lista ordenada después tengo que agregar li (tabulado)
     ul type=”disc” son viñetas de puntos
     También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
-    <li>div no va a tener ningun cambio, solo marcan secciones en la página creada
-    </li>
+    </li>div no va a tener ningun cambio, solo marcan secciones en la página creada
     </ul>
 </body>
 </html>
+
