--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
     </li>div no va a tener ningun cambio, solo marcan secciones en la página creada
     </ul>
+    <table border="1px">
+        <tr><th>Nombre</th><th>Apellido</th></tr>
+        <tr><td>Sofi</td><td>Berardo</td></tr>
+        <tr><td></td><td>Vázquez</td></tr>
+    </table>
 </body>
 </html>
 
