--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machete</title>
+    <title>Programación</title>
 </head>
 <body>
-    <h1>Machete</h1>
+    <h1>Machete etiquetas</h1>
     <img src="https://pbs.twimg.com/profile_images/719613392382779392/UgqrF492_400x400.jpg" alt="ITBA">
     <ul type="disc">
     <li>h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
@@ -25,7 +25,6 @@
     También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
     </li>div no va a tener ningun cambio, solo marcan secciones en la página creada
     </ul>
-    
     <h1>Notas clase 16/03</h1>
     <table border="1px">
         <tr><th>Nombre</th><th>Apellido</th></tr>
