--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
     También puedo ul a  href=”link de la imagen” lo que hace es que la imagen en sí sea un link entonces si lo aprieto me lleva ahi.
     </li>div no va a tener ningun cambio, solo marcan secciones en la página creada
     </ul>
-    <h1>Tablas</h1>
+    <h1>Notas</h1>
+    <h2>Tablas</h2>
     <table border="1px">
         <tr><th>Nombre</th><th>Apellido</th></tr>
         <tr><td>Sofi</td><td>Berardo</td></tr>
         <tr><td></td><td>Vázquez</td></tr>
     </table>
+    <h2>Formulario</h2>
+    <form action="">
+
+    </form>
 </body>
 </html>
 
