--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Notas</h1>
-    <h2>Etiquetas</h2>
+    <h2>Imágen</h2>
     <img src="https://pbs.twimg.com/profile_images/719613392382779392/UgqrF492_400x400.jpg" alt="ITBA">
     <ul type="disc">
+    <h2>Etiquetas</h2>
     <li>h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
     <li>p marca que dentro de la etiqueta va a haber un párrafo.
     <li>Place holder: espacio que yo puedo ocupar. Lorem ipsum (es de lleno hasta que quiero ocupar ese espacio)
@@ -33,8 +34,8 @@
         <tr><td></td><td>Vázquez</td></tr>
     </table>
     <h2>Formulario</h2>
-    <form action="" method="get">
-
+    <form action="" method="post">
+        
     </form>
 </body>
 </html>
