--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </table>
     <h2>Formulario</h2>
     <form action="" method="post">
-        
+        <input type="text" name="" id="">
     </form>
 </body>
 </html>
