--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Notas</h1>
     <h2>Imágen</h2>
     <img src="https://pbs.twimg.com/profile_images/719613392382779392/UgqrF492_400x400.jpg" alt="ITBA">
-    <ul type="disc">
     <h2>Etiquetas</h2>
+    <ul type="disc">
     <li>h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
     <li>p marca que dentro de la etiqueta va a haber un párrafo.
     <li>Place holder: espacio que yo puedo ocupar. Lorem ipsum (es de lleno hasta que quiero ocupar ese espacio)
@@ -35,7 +35,10 @@
     </table>
     <h2>Formulario</h2>
     <form action="" method="post">
-        <input type="text" name="" id="">
+        <label for="formName">Nombre:</label>
+        <input type="text" name="formName">
+        <input type="button" value="Falso Enviar">
+        <input type="submit" value="Enviar">
     </form>
 </body>
 </html>
