--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        alt {
+            width: 100vw;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +14,7 @@
 <body>
     <h1>Notas</h1>
     <h2>Imágen</h2>
-    <img src="https://pbs.twimg.com/profile_Zimages/719613392382779392/UgqrF492_400x400.jpg" alt="ITBA":style= width: 100vw;>
+    <img src="https://pbs.twimg.com/profile_Zimages/719613392382779392/UgqrF492_400x400.jpg" alt="ITBA">
     <h2>Etiquetas</h2>
     <ul type="disc">
     <li>h1 (cada h y el número disminuye el tamaño de la letra, lo ordena por jerarquía)
