--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programación</title>
+    <title>Where to work</title>
 </head>
 <body>
+    <h1>Where to work</h1>
+    <img src="./imagenes/la-importancia-del-cafe-en-el-trabajo-e1597810571487.jpg" alt="Trabajo en cafeterías" width="700">
 </body>
 </html>
