--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where to work</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Where to work</h1>
-    <img src="./imagenes/la-importancia-del-cafe-en-el-trabajo-e1597810571487.jpg" alt="Trabajo en cafeterías" width="700">
+    <h1>Estudio Nómade</h1>
+    <img src="./imagenes/la-importancia-del-cafe-en-el-trabajo-e1597810571487.jpg" alt="Espacios para trabajar" width="700">
+    <p>¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar un motivación para sentarte a trabajar? Llegaste al lugar correcto! Estudio Nómade es una plataforma en la que vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un lugar tranquilo, cómodo, con buena conexión, y ¿por qué no? algo rico para acompañar :)</p>
 </body>
 </html>
