--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Where to work</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Estudio Nómade</title>
 </head>
 <body>
     <h1>Estudio Nómade</h1>
-    <img src="./imagenes/la-importancia-del-cafe-en-el-trabajo-e1597810571487.jpg" alt="Espacios para trabajar" width="700">
+    <img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="305"><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café" width="342"><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca" width="287.5"><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes" width="341"><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="305.5">
     <p>¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar un motivación para sentarte a trabajar? Llegaste al lugar correcto! Estudio Nómade es una plataforma en la que vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un lugar tranquilo, cómodo, con buena conexión, y ¿por qué no? algo rico para acompañar :)</p>
 </body>
 </html>
