--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Estudio Nómade</h1>
     <img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="243.5"><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café" width="273"><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca" width="229.5"><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes" width="272"><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="243.5">
-    <p>¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar un motivación para sentarte a trabajar? Llegaste al lugar correcto! Estudio Nómade es una plataforma en la que vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un lugar tranquilo, cómodo, con buena conexión, y ¿por qué no? algo rico para acompañar :)</p>
+    <p>¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar un motivación para sentarte a trabajar? Llegaste al lugar correcto! Estudio Nómade es una plataforma en la que vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? algo rico para acompañar ;)</p>
 </body>
 </html>
