--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Estudio Nómade</h1>
-    <p>¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Con la ayuda de Estudio Nómade vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar ;)</p>    <img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="243.5"><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café" width="273"><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca" width="229.5"><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes" width="272"><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="243.5">
+    <p id="para1">¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Con la ayuda de Estudio Nómade vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar...</p>    <img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="243.5"><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café" width="273"><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca" width="229.5"><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes" width="272"><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="243.5">
+    <hr>
+    <p id="paratítulos">¿Dónde te gustaría estudiar/trabajar hoy?</p>
+    <p id="para2" class="lugares">Biblioteca</p><p class="lugares" id="para3">Cafetería</p><p class="lugares" id="para4">Espacio CoWork</p>
 </body>
 </html>
