--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <title>Estudio Nómade</title>
 </head>
 <body>
-    <h1>Estudio Nómade</h1>
-    <p id="para1">¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Con la ayuda de Estudio Nómade vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar...</p>    
+    <header>
+        <h1>Estudio Nómade</h1>
+        <p id="para1">¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Con la ayuda de Estudio Nómade vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar...</p>
+    </header>  
     <table>
         <tr>
-        <td><img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar"></td>
-        <td><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café"></td>
-        <td><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca"></td>
-        <td><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes"></td>
-        <td><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería"></td>
+        <td><img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="248px" height="300px"></td>
+        <td><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café" width="248px" height="300px"></td>
+        <td><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca" width="248px" height="300px"></td>
+        <td><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes" width="248px" height="300px"></td>
+        <td><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="248px" height="300px"></td>
         </tr>
     </table>
     <hr>
-    <p id="paratítulos">¿Dónde te gustaría estudiar/trabajar hoy?</p>
+    <p id="paratitulos">¿Dónde te gustaría estudiar/trabajar hoy?</p>
     <p id="para2" class="lugares">Biblioteca</p><p class="lugares" id="para3">Cafetería</p><p class="lugares" id="para4">Espacio CoWork</p>
 </body>
 </html>
