--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudio Nómade</title>
+    <title>Synergia</title>
 </head>
 <body>
-    <header>
-        <h1>Estudio Nómade</h1>
-        <p id="para1">¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Con la ayuda de Estudio Nómade vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar...</p>
-    </header>  
+        <h1>Synergia</h1>
+        <p id="para1">¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Synergia es una plataforma en la que vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar...</p>  
     <table>
         <tr>
         <td><img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="248px" height="300px"></td>
