--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <td><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="248px" height="300px"></td>
         </tr>
     </table>
-    <hr>
+    <div>
     <p id="paratitulos">¿Dónde te gustaría estudiar/trabajar hoy?</p>
     <p id="para2" class="lugares">Biblioteca</p><p class="lugares" id="para3">Cafetería</p><p class="lugares" id="para4">Espacio CoWork</p>
+    </div>
 </body>
 </html>
