--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </tr>
     </table>
     <div>
-    <p id="paratitulos">¿Dónde te gustaría estudiar/trabajar hoy?</p>
-    <p id="para2" class="lugares">Biblioteca</p><p class="lugares" id="para3">Cafetería</p><p class="lugares" id="para4">Espacio CoWork</p>
+    <p id="paratitulos"><b>¿Dónde te gustaría estudiar/trabajar hoy?</b></p>
+    <p id="para2" class="lugares"><b>Biblioteca</b></p><p class="lugares" id="para3"><b>Cafetería</b></p><p class="lugares" id="para4"><b>Espacio CoWork</b></p>
     </div>
 </body>
 </html>
