--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Synergia</title>
 </head>
 <body>
-        <h1>Synergia</h1>
-        <p id="para1">¿Estás cansado de estudiar siempre en el mismo lugar? ¿Querés cambiar de aires y encontrar una nueva motivación para sentarte a trabajar? Llegaste al lugar correcto! Synergia es una plataforma en la que vas a encontrar los mejores lugares para estudiar o trabajar fuera de casa, en un espacio tranquilo, cómodo, con buena conexión, y ¿por qué no? quizás también algo rico para acompañar...</p>  
+        <h1>Comer en BA</h1>
+        <p id="para1">Encontrá lo que querés comer y en dónde en Buenos aires, la capital más linda del mundo :)</p>  
     <table>
         <tr>
         <td><img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="248px" height="300px"></td>
@@ -22,9 +22,5 @@
         <td><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="248px" height="300px"></td>
         </tr>
     </table>
-    <div>
-    <p id="paratitulos"><b>¿Dónde te gustaría estudiar/trabajar hoy?</b></p>
-    <p id="para2" class="lugares"><b>Biblioteca</b></p><p class="lugares" id="para3"><b>Cafetería</b></p><p class="lugares" id="para4"><b>Espacio CoWork</b></p>
-    </div>
 </body>
 </html>
