--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synergia</title>
 </head>
 <body>
-        <h1>Comer en BA</h1>
-        <p id="para1">Encontrá lo que querés comer y en dónde en Buenos aires, la capital más linda del mundo :)</p>  
+        <div id="paraMenuSup">
+            <span id="paraMenu">Volver</span>
+            <span id="paraMenu">Inicio</span>
+            <span id="paraMenu">Menú</span>
+        </div>
+        <div id="MargsTitulo">
+            <hr>
+            <div id="paraTitulo">Comer en BA</div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+            <hr>
+        </div>
     <table>
         <tr>
         <td><img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="248px" height="300px"></td>
