--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@
     <title>Synergia</title>
 </head>
 <body>
-        <div id="paraMenuSup">
-            <span id="paraMenu">Volver</span>
-            <span id="paraMenu">Inicio</span>
-            <span id="paraMenu">Menú</span>
-        </div>
-        <div id="MargsTitulo">
-            <hr>
-            <div id="paraTitulo">Comer en BA</div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
-            <hr>
-        </div>
+    <div id="paraMenuSup">
+        <div id="paraMenu1">Volver</div>
+        <div id="paraMenu2">Inicio</div>
+        <div id="paraMenu3">Menú</div>
+    </div>
+    <hr>
+    <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+    <hr>
     <table>
         <tr>
-        <td><img src="./imagenes/espacio co work.jpg" alt="Espacios para trabajar" width="248px" height="300px"></td>
-        <td><img src="./imagenes/café.y.estudio.jpg" alt="Estudio y café" width="248px" height="300px"></td>
-        <td><img src="./imagenes/biblioteca.jpg" alt="Estudio en Biblioteca" width="248px" height="300px"></td>
-        <td><img src="./imagenes/Estudiar en espacios comunes.jpg" alt="Estudiar en espacios comunes" width="248px" height="300px"></td>
-        <td><img src="./imagenes/trabajo en café.jpg" alt="Trabajo en una cafetería" width="248px" height="300px"></td>
+        <td><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><p class="textoFoto1">ELEGÍ POR COMIDA</p></td>
+        <td><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><p class="textoFoto2">ELEGÍ POR BARRIO</p></td>
+        <td><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><p class="textoFoto3">ELEGI POR HORA DEL DÍA</p></td>
         </tr>
     </table>
 </body>
