Negritas en menú

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <div id="paraMenuSup">
-        <div id="paraMenu1">Volver</div>
-        <div id="paraMenu2">Inicio</div>
-        <div id="paraMenu3">Menú</div>
+        <div id="paraMenu1"><b>Volver</b></div>
+        <div id="paraMenu2"><b>Inicio</b></div>
+        <div id="paraMenu3"><b>Menú</b></div>
     </div>
     <hr>
     <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
