--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
     <div id="paraMenuSup">
-        <div id="paraMenu1"><b>Volver</b></div>
+        <div id="paraMenu1"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><b>Volver</b></div>
         <div id="paraMenu2"><b>Inicio</b></div>
         <div id="paraMenu3"><b>Menú</b></div>
     </div>
     <hr>
-    <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+    <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p><img class="flecha2" src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
     <hr>
     <table>
         <tr>
