--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="paraMenu3"><b>Menú</b></div>
     </div>
     <hr>
-    <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p><img class="flecha2" src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+    <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
     <hr>
     <table>
         <tr>
