--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <hr>
     <table>
         <tr>
-        <td><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><p class="textoFoto1">ELEGÍ POR COMIDA</p></td>
-        <td><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><p class="textoFoto2">ELEGÍ POR BARRIO</p></td>
-        <td><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><p class="textoFoto3">ELEGI POR HORA DEL DÍA</p></td>
+        <td><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto1">ELEGÍ POR COMIDA</p></a></td>
+        <td><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto2">ELEGÍ POR BARRIO</p></a></td>
+        <td><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto3">ELEGI POR HORA DEL DÍA</p></a></td>
         </tr>
     </table>
 </body>
