--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
     <hr>
     <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
     <hr>
-    <table>
-        <tr>
-        <td><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto1">ELEGÍ POR COMIDA</p></a></td>
-        <td><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto2">ELEGÍ POR BARRIO</p></a></td>
-        <td><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto3">ELEGI POR HORA DEL DÍA</p></a></td>
-        </tr>
-    </table>
+    <div class="fotos">
+        <div class="foto"><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
+        <div class="foto"><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
+        <div class="foto"><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGI POR HORA DEL DÍA</p></a></div>
+    </div>
 </body>
 </html>
