titulo pero no me salio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div id="paraMenu3"><b>Menú</b></div>
     </div>
     <hr>
-    <div><p id="paraTitulo">Comer</p><p class="margenes">en BA</p></div><div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+    <span id="paraTitulo">Comer en BA</span>
+    <span id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</span>
     <hr>
     <div class="fotos">
         <div class="foto"><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
