--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
         <div id="paraMenu3"><b>Menú</b></div>
     </div>
     <hr>
-    <span id="paraTitulo">Comer en BA</span>
-    <span id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</span>
+    <div class="container">
+        <div id="paraTitulo">Comer en BA</div>
+        <div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+    </div>
     <hr>
     <div class="fotos">
         <div class="foto"><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
         <div class="foto"><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
-        <div class="foto"><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGI POR HORA DEL DÍA</p></a></div>
+        <div class="foto"><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGÍ POR HORA DEL DÍA</p></a></div>
     </div>
 </body>
 </html>
