--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <title>Comer en BA</title>
 </head>
 <body>
-    <div id="paraMenuSup">
-        <div id="paraMenu1"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><b>Volver</b></div>
-        <div id="paraMenu2"><b>Inicio</b></div>
-        <div id="paraMenu3"><b>Menú</b></div>
+    <div class="menu">
+        <div class="volver"><img class="flecha" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><b>Volver</b></div>
+        <div class="inicio"><b class="espacio">Inicio</b><b>Qué es Comer en BA?</b></div>
     </div>
     <hr>
     <div class="container">
         <div id="paraTitulo">Comer en BA</div>
+        <div><img class="flecha2" src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
         <div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
     </div>
     <hr>
