--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="Contenido">
             <div class="Cafe"></div>
-            <div class="Hamburguesas"></div>
+            <div class="Veggie"></div>
             <div class="BBB"></div>
             <div class="Especial"></div>
             <div class="Bares"></div>
